#83 Popup create window: Field labels, controls and values in drop down lists are center aligned. (In the original create window the layout is correct)

--- a/lightadmin-core/src/main/resources/META-INF/resources/styles/ui_custom.css
+++ b/lightadmin-core/src/main/resources/META-INF/resources/styles/ui_custom.css
@@ -1365,7 +1365,7 @@ button.ui-button::-moz-focus-inner {
 }
 
 .ui-dialog form {
-    text-align: center;
+    /*text-align: center;*/
 }
 
 .ui-dialog .icon {
